# Overwatch

./: .gitignore  README.md  SPEC.md  build-and-install.sh  rtl_sdr_socket.py  scan_wifi.swift
.github/workflows/: android-apk.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/ai/overwatch/android/: CctvSourceActivity.kt  CollectorService.kt  ConfigStore.kt  MainActivity.kt  TacticalMapActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
docs/: CONFLICT_CCTV_CORRELATION.md
memory/: 2026-03-15-shodan-layer-notes.md
osint_hub/: .env.example  README.md  SOCIAL_OSINT.md  STRUCTURED_SETUP.md  STRUCTURED_SOURCES.md  conflict_events.db  conflict_events.db.old  requirements.txt
osint_hub/app/: acled.py  conflict_events.py  conflict_ingest.py  db.py  events.py  gdelt_ingest.py  geocode.py  geocoding.py  main.py  rss_ingest.py  shodan.py  social_ingest.py  structured_ingest.py
sigint/: Cargo.toml
sigint/src/: collector.rs  confidence.rs  crypto.rs  error.rs  gps.rs  hub.rs  lib.rs  manet.rs  rf.rs  sanitize.rs  storage.rs  sweeper.rs  sync.rs  wifi.rs  wire.rs
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/proto/: meshtastic.proto
src-tauri/src/: lib.rs  main.rs  meshtastic.rs  sidecar_management.rs
webui/: conflict-module.js  diagnostic-dump.html  index.html  tac-ui.css  test-conflict-simple.html  test_conflict.html
