[package]
name = "sigint"
version = "0.1.0"
edition = "2021"
description = "SIGINT RF and Wi-Fi heatmap collection and aggregation for Overwatch"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

[dev-dependencies]
tempfile = "3"
