[package]
name = "sigint"
version = "0.1.0"
edition = "2021"
description = "SIGINT RF and Wi-Fi heatmap collection and aggregation for Overwatch"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
h3o = { version = "0.6", features = ["serde"] }
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
