[package]
name = "overwatch"
version = "0.1.0"
description = "Tactical Operations Center - Offline-first mesh communications"
authors = ["TheLomax"]
license = "MIT"
repository = "https://github.com/samthelomaxproject-stack/Overwatch"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "overwatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

# For mesh networking (future Reticulum integration)
# rns = "0.9"  # Uncomment when ready
