[package]
name = "overwatch"
version = "0.2.2"
description = "Tactical Operations Center - Offline-first mesh communications"
authors = ["TheLomax"]
license = "MIT"
repository = "https://github.com/samthelomaxproject-stack/Overwatch"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "overwatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }
prost-build = "0.12"

[dependencies]
serde_json = "1.0"
ureq = "2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"

# Meshtastic integration
serialport = "4.3"
prost = "0.12"
bytes = "1.5"
tokio = { version = "1.35", features = ["sync", "rt", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
once_cell = "1.20"

# For mesh networking (future Reticulum integration)
# rns = "0.9"  # Uncomment when ready
